<resources>
    <string name="app_name">ManagerIO</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_transactions">Transactions</string>

    <string name="add_contact">Add Contact</string>
    <string name="add_transaction">Add Transaction</string>

    <string name="contact_info">Contact Info</string>
    <string name="contact_first_name">First Name</string>
    <string name="contact_last_name">Last Name</string>
    <string name="contact_mobile_cc">CC</string>
    <string name="contact_mobile_no">Mobile no.</string>

    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="login">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="or">Or</string>

    <string name="transaction_amount">Amount</string>
    <string name="transaction_date">Transaction Date</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="contact_information">Contact Information</string>
    <string name="edit_contact_initials">AA</string>

    <string name="india_cc">+91</string>
    <string name="contact_added_success">Contact Added Successfully</string>
    <string name="transaction_added_success">Transaction Added Successfully</string>
</resources>