<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_contact_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            style="@style/ToolbarTextStyle"
            android:text="@string/add_contact" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/add_contact_first_name"
        style="@style/EditTextFieldStyle"
        android:hint="@string/contact_first_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/add_contact_last_name"
        style="@style/EditTextFieldStyle"
        android:hint="@string/contact_last_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/add_contact_cc"
            android:hint="@string/contact_mobile_cc"
            android:text="@string/india_cc"
            android:inputType="phone"
            style="@style/PhoneEditTextFieldStyle"
            android:autofillHints=""
            android:layout_weight="5.0"/>
        <EditText
            android:id="@+id/add_contact_mobile_no"
            android:hint="@string/contact_mobile_no"
            android:inputType="phone"
            style="@style/PhoneEditTextFieldStyle"
            android:autofillHints=""
            android:layout_weight="1.5"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_contact_dialog_cancel"
            style="@style/DialogButtonStyle"
            android:text="@string/cancel"
            android:layout_weight="1.0"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <Button
            android:id="@+id/add_contact_dialog_done"
            style="@style/DialogButtonStyle"
            android:text="@string/done"
            android:layout_weight="1.0"/>
    </TableRow>
</LinearLayout>