<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_contact_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:title="@string/add_transaction"
        app:titleTextAppearance="@style/ToolbarTextStyle">
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/add_transaction_amount"
        style="@style/EditTextFieldStyle"
        android:hint="@string/transaction_amount"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <DatePicker
        android:id="@+id/add_transaction_date"
        style="@style/EditTextFieldStyle"
        android:layout_height="170dp"
        android:autofillHints=""
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:hint="@string/transaction_date"
        android:inputType="datetime" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_contact_dialog_cancel"
            style="@style/DialogButtonStyle"
            android:text="@string/cancel"
            android:layout_weight="1.0"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <Button
            android:id="@+id/add_contact_dialog_done"
            style="@style/DialogButtonStyle"
            android:text="@string/done"
            android:layout_weight="1.0"/>
    </TableRow>
</LinearLayout>