<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ActivityViewContact">

    <LinearLayout
        android:id="@+id/linear_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_view_contact_initials"
            android:layout_width="205dp"
            android:layout_height="160dp"
            android:text="@string/edit_contact_initials"
            android:textSize="120sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/activity_view_contact_first_name"
                android:layout_width="205dp"
                android:layout_height="50dp"
                android:hint="@string/contact_first_name"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/activity_view_contact_last_name"
                android:layout_width="205dp"
                android:layout_height="50dp"
                android:hint="@string/contact_last_name"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/activity_view_contact_mobile_cc"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:hint="@string/contact_mobile_cc"
                    android:inputType="phone"/>
                <EditText
                    android:id="@+id/activity_view_contact_mobile_no"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:hint="@string/contact_mobile_no"
                    android:inputType="phone"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_transactions_info"
        android:layout_below="@+id/linear_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_transactions"
            style="@style/DialogButtonStyle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <ListView
            android:id="@+id/activity_view_contact_transactions_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_transactions"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_view_contact_add_new_transaction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_add"
        android:contentDescription="@string/add_transaction"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>
</RelativeLayout>